Add assign / withdraw each friend

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,6 +43,17 @@
   .text {
     min-height: 60px;
   }
+
+  .buttons {
+    form {
+      display: inline;
+    }
+    margin-top: 5px;
+  }
+}
+
+.friend_assign_number_message {
+  margin-top: 20px;
 }
 
 .friend_form {
