--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.header {
-  margin: 20px;
+.global_navigation {
+  margin-top: 20px;
 }
 
 .friends_management {
@@ -59,5 +59,40 @@
 .friend_form {
   .btn.btn-primary {
     margin-top: 20px;
+  }
+}
+
+.friends_memory_mode {
+  text-align: right;
+}
+
+.friends_memory_canvas {
+  margin-top: 20px;
+  $base_size: 200px;
+
+  .friend {
+    display: none;
+  }
+
+  .image {
+    width: $base_size * 2;
+    height: $base_size * 2;
+    border-radius: $base_size;
+  }
+
+  .name {
+    text-align: center;
+    font-size: $base_size / 5;
+    font-weight: bold;
+
+    .name_text {
+      margin-top: 20px;
+    }
+  }
+
+  .number {
+    font-size: $base_size;
+    text-align: center;
+    margin-top: $base_size / 4;
   }
 }
