--- a/app/views/friends/memory.html.haml
+++ b/app/views/friends/memory.html.haml
@@ -1,5 +1,7 @@
 .page-header
-  %h1 MEMORY FRIENDS #{params[:range]}
+  %h1
+    MEMORY FRIENDS #{params[:range]}
+    %span.small j,k to change number
 
 .friends_memory_mode
   .btn-group.first{ role: 'group' }
