Add object and action

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -71,8 +71,9 @@
   box-sizing: border-box;
   margin: 20px 0 100px 0;
 
-  .friend {
+  .memory {
     float: left;
+    position: relative;
   }
 
   .image {
