--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
                 = link_to 'friends', friends_path
               %li.dropdown
                 %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", href: "#", role: "button"}
-                  memory friends
+                  memory
                   %span.caret
                 %ul.dropdown-menu{role: "menu"}
                   %li
