Place name first as default

--- a/app/views/friends/memory.html.haml
+++ b/app/views/friends/memory.html.haml
@@ -15,10 +15,10 @@
       actions
 
   .btn-group.first{ role: 'group' }
-    %a.btn.btn-default.active{ type: 'button', href: '#', data: { first: 'number' } }
-      number first
-    %a.btn.btn-default{ type: 'button', href: '#', data: { first: 'name' } }
+    %a.btn.btn-default.active{ type: 'button', href: '#', data: { first: 'name' } }
       name first
+    %a.btn.btn-default{ type: 'button', href: '#', data: { first: 'number' } }
+      number first
 
   .btn-group.count
     .dropdown
