Add counter to close #1

--- a/app/views/friends/memory.html.haml
+++ b/app/views/friends/memory.html.haml
@@ -31,6 +31,8 @@
           %li{role: "presentation"}
             %a{href: "#", role: "menuitem", tabindex: "-1", data: { count: count }} count #{count}
 
+.counter
+
 .friends_memory_canvas{ data: { path: friends_path(range: params[:range]),
 objects_path: memory_objects_path(range: params[:range]),
 actions_path: memory_actions_path(range: params[:range]) } }
